@@ -8,6 +8,7 @@
   * Made nokogiri work with Snow Leopard GH #79
   * Mailing list has moved to: http://groups.google.com/group/nokogiri-talk
   * HTML fragments now correctly handle comments and CDATA blocks. GH #78
+  * Nokogiri::XML::Document#clone is now an alias of dup
 
 === 1.3.1 / 2009-06-07
 
